JDK12 restrictions on reflection means (ironically) switch to Unsafe to swap the static final map field in Drewnoakes